added solution for sorting problem