@@ -44,6 +44,9 @@
           <!-- since version 3.10.1-->
           <release>${java.version}</release>
           <enablePreview>true</enablePreview>
+            <source>21</source>
+            <target>21</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
